# segyviewer

./: CMakeLists.txt  ColorSchemes.cpp  ColorSchemes.hpp  MainWindow.cpp  MainWindow.hpp  README.md  SegyDataManager.cpp  SegyDataManager.hpp  SegyReader.cpp  SegyReader.hpp  SegyViewer.cpp  SegyViewer.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SettingsPanel.cpp  SettingsPanel.hpp  StatusPanel.cpp  StatusPanel.hpp  TraceInfoPanel.cpp  TraceInfoPanel.hpp  main.cpp  test_segy.cpp
sgylib/: BinFieldMap.hpp  Optional.hpp  SegyReader.cpp  SegyReader.hpp  SegyUtil.cpp  SegyUtil.hpp  SegyWriter.cpp  SegyWriter.hpp  TraceFieldMap.hpp  TraceMap.cpp  TraceMap.hpp
